# el-dorado

./: .env  .gitignore  Cargo.toml  README.md  configuration.yaml  response.json  sqlx-data.json
configuration/: base.yaml  local.yaml  production.yaml
migrations/: 20210828231554_create_trades_hist_ftxus_table.sql  20210902170151_create_markets_table.sql  20210902211041_create_exchanges_table.sql  20210908225418_create_daily_candles_table.sql  20210924203918_alter_candle_tables_primary_keys.sql  20210930000859_alter_trade_tables_add_pkeys_and_indexes.sql  20211002192332_alter_candles_add_first_trade.sql  20211004025537_alter_01d_candles_add_archive_flag.sql  20211009045139_alter_01d_candles_add_complete_flag.sql  20211205212942_drop_monolith_trade_tables.sql  20211211193427_alter_markets_table_add_mita_candle.sql  20211221182638_create_candle_validation_table.sql  20211222215238_create_candle_validation_table.sql  20211225185737_update_market_status_to_enums.sql  20211229070357_alter_candle_validations_primary_key.sql  20220101072150_create_metrics_table.sql  20220103222230_create_events_table.sql  20220201041752_alter_metrics_ap.sql  20220408033134_create_instances_table.sql  20220421025708_alter_instances_add_message_column.sql  20220423013115_create_alerts_table.sql  20220428153833_alter_markets_table.sql  20220502014550_create_market_trade_details_table.sql  20220830155530_insert_exchanges.sql  20220830180232_insert_base_market.sql  20220830183120_create_exchange_candle_tables.sql  20221003020331_creat_market_candle_details_table.sql  20221016205035_create_schema_archive.sql  20230128175610_create_market_archive_details_table.sql  20230227191413_create_research_metrics_table.sql  20230311152606_alter_markets_table.sql  20230311161536_fix_default_market_insert.sql
scripts/: compress_archive.py  init_db.sh
src/: alerts.rs  archive.rs  candles.rs  cleanup.rs  configuration.rs  eldorado.rs  events.rs  exchanges.rs  historical.rs  inquisidor.rs  instances.rs  lib.rs  main.rs  markets.rs  metrics.rs  mita.rs  monitor.rs  startup.rs  stream.rs  trades.rs  utilities.rs  validation.rs
src/cleanup/: ftx_01d_revalidation.rs  ftx_15t_revalidation.rs  ftx_candle_validations.rs  trade_index_and_candle_validation.rs
src/exchanges/: bybit.rs  client.rs  error.rs  ftx.rs  gdax.rs  kraken.rs  mod.rs  ws.rs
src/exchanges/ftx/: client.rs  error.rs  markets.rs  mod.rs  stats.rs
src/exchanges/gdax/: client.rs  products.rs
tests/: AVAXUSD_d01_202205.csv  LDOUSD-2023-01-15.csv  historical_trades.rs  markets.rs
(+1 files in other folders)
