[package]
name = "el-dorado"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "el-dorado"


[dependencies]
chrono = { version = "0.4.19", features = ["serde"] }
clap = "3.0.0-beta.4"
config = "0.11.0"
ipnetwork = "0.18.0"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.64"
sqlx = { version = "0.5.7", features = ["runtime-tokio-rustls", "postgres", "macros", "uuid", "chrono", "ipnetwork", "migrate"] }
tokio = { version = "1", features = ["full"] }
uuid = { version = "0.8.2", features = ["v4"] }
