[package]
name = "el-dorado"
version = "0.3.6"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "el-dorado"


[dependencies]
chrono = { version = "0.4.19", features = ["serde"] }
clap = "3.0.0-beta.4"
config = "0.11.0"
csv = "1.1.6"
flate2 = "1.0.22"
futures = "0.3.18"
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
rust_decimal = { version = "1.15.0", features = ["maths"] }
rust_decimal_macros = "1.15.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.64"
sqlx = { version = "0.5.7", features = ["runtime-tokio-rustls", "postgres", "macros", "uuid", "chrono", "ipnetwork", "migrate", "decimal", "offline"] }
thiserror = "1.0.29"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = {version = "0.16.0", features = ["rustls-tls-native-roots"]}
uuid = { version = "0.8.2", features = ["v4", "serde"] }
twilio = { git = "https://github.com/sr-fuentes/twilio-rs" }
